--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t me/emaily -f ./server/Dockerfile ./server
+  - docker build -t muhammedkamel/emaily -f ./server/Dockerfile ./server
 
 script:
   - docker run me/emaily npm run test
@@ -18,6 +18,7 @@ notifications:
 
 after_success:
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
+  - docker build -t muhammedkamel/emaily -f ./server/Dockerfile ./server
   - docker push muhammedkamel/emaily
 
 deploy:
